네이버맵 띄우기 성공 (클릭한 매장 정보 넘겨서 위치보여주기)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".NaverMap"
-            android:label="NaverMap Open"
-            ></activity>
+        <activity android:name=".MapNaver"></activity>
     </application>
 
 </manifest>
