지정좌표 주변 place 검색 성공 (네이버 place - 최대 5개 결과 리턴) (누를때마다 리턴결과 다름)
1029-1722
현재 좌표 위치확인 성공, 3초마다 재확인 성공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.maptest">
 
+    <!-- 인터넷권한 -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <!-- 위치추적 권한 설정 (GPS이용 상세위치파악 권한 / 기지국,와이파이 이용 개략적위치파악 권한) -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
