--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'         // RecyclerView 사용위한 라이브러리
-
     implementation 'org.jsoup:jsoup:1.11.3'                             // 파싱 jsoup 라이브러리
     implementation 'com.android.support:design:28.0.0'                  // BottomNavigation Bar 라이브러리
+    implementation 'com.android.support:appcompat-v7:28.0.0'            // Drawerble위해
+    implementation 'com.android.support:support-v4:28.0.0'              // Drawerble위해
 
     implementation 'com.naver.maps:map-sdk:3.6.0'
 
