지정좌표 주변 place 검색 성공             (네이버 place - 최대 5개 결과 리턴)             (누를때마다 리턴결과 다름)
            1029-1722
            현재 좌표 위치확인 성공, 3초마다 재확인 성공

            1029-2018
            현재 위치 중심 주변 매장REST 성공

            1107-1754
            수동 고르기 프래그먼트 추가(frag11)
            DB저장 성공
            DB중복 확인 성공

            1108-1916
            파싱 재수정완료

            1109-1543
            확장리스트뷰 설정 성공

            1111-2216
            DrawableView 테스트전

            1112-1502
            menu1, menu2 적용
            menu2 회차검색 / DB설정 완료

            1112-1707
            메뉴2 구현완료
            메뉴1 구현시작

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 로딩화면 액티비티 -->
+        <activity android:name=".Loading" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+
         <activity android:name=".MapNaver"></activity>
     </application>
 
