지정좌표 주변 place 검색 성공             (네이버 place - 최대 5개 결과 리턴)             (누를때마다 리턴결과 다름)
            1029-1722
            현재 좌표 위치확인 성공, 3초마다 재확인 성공

            1029-2018
            현재 위치 중심 주변 매장REST 성공

            1107-1754
            수동 고르기 프래그먼트 추가(frag11)
            DB저장 성공
            DB중복 확인 성공

            1108-1916
            파싱 재수정완료

            1109-1543
            확장리스트뷰 설정 성공

            1111-2216
            DrawableView 테스트전

            1112-1502
            menu1, menu2 적용
            menu2 회차검색 / DB설정 완료

            1112-1707
            메뉴2 구현완료
            메뉴1 구현시작

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     package="com.example.maptest">
 
     <!-- 인터넷권한 -->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <!-- 위치추적 권한 설정 (GPS이용 상세위치파악 권한 / 기지국,와이파이 이용 개략적위치파악 권한) -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <!-- 전화걸기 권한 -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -15,6 +17,13 @@
     <!-- 스크린캡쳐 권한 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- 알람 권한 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <!-- 진동 권한 -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -38,19 +47,36 @@
             android:value="y0189tgx11"
             ></meta-data>
         <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
-            <!-- 스크린방향 세로고정 (portrait), 가로(landscape) -->
+            android:screenOrientation="portrait"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <!-- 로딩화면 액티비티 -->
-        <activity android:name=".Loading" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity android:name=".Loading" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
 
+        </activity>
+        <!-- 네이버지도 액티비티 -->
         <activity android:name=".MapNaver"></activity>
+        <!-- QR 바코드 액티비티 -->
+        <activity android:name=".QRCodeActivity"></activity>
+
+        <!-- 알람 처리 Receiver -->
+        <receiver android:name=".AlarmPackage.AlarmReceiver">
+            <intent-filter>
+                <action android:name="com.example.alarmtestat.ALRAM_START" />
+            </intent-filter>
+        </receiver>
+        <!-- 부팅시 알람 재설정 Receiver -->
+        <receiver android:name=".AlarmPackage.BootReceiver"
+            android:enabled="true" android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
