--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'            // Drawerble위해
     implementation 'com.android.support:support-v4:28.0.0'              // Drawerble위해
 
+    // 바코드 사용위해
+    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+    // 네이버지도 사용위해 의존성 추가
     implementation 'com.naver.maps:map-sdk:3.6.0'
 
     testImplementation 'junit:junit:4.12'
