--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -22,27 +24,33 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.0'
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'         // RecyclerView 사용위한 라이브러리
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+//    implementation 'com.android.support:recyclerview-v7:28.0.0'         // RecyclerView 사용위한 라이브러리
+
     implementation 'org.jsoup:jsoup:1.11.3'                             // 파싱 jsoup 라이브러리
     implementation 'com.android.support:design:28.0.0'                  // BottomNavigation Bar 라이브러리
     implementation 'com.android.support:appcompat-v7:28.0.0'            // Drawerble위해
     implementation 'com.android.support:support-v4:28.0.0'              // Drawerble위해
 
-    // 바코드 사용위해
+    // Zxing 라이브러리 (QR코드)
     implementation 'com.google.zxing:core:3.4.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
-    // 네이버지도 사용위해 의존성 추가
+    // NaverMap API
     implementation 'com.naver.maps:map-sdk:3.6.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Stetho 라이브러리 의존성
     implementation 'com.facebook.stetho:stetho:1.5.1'
-
-
 }
